# CandyCommon

./: CMakeLists.txt  README.md  main.cpp  setup_script.py  vcpkg.json
include/candy/base/: CandyConcepts.hpp  UUID.hpp  Version.hpp
include/candy/collections/: Array2D.hpp  Array3D.hpp  DualMap.hpp  GenericBuffer.hpp
include/candy/math/: Color.hpp
include/candy/noise/: PerlinNoise.hpp
lib/nativefiledialog/: CMakeLists.txt
lib/rapidyaml/ext/c4core/src/c4/: allocator.hpp  memory_resource.hpp  windows_push.hpp
lib/rapidyaml/ext/c4core/test/c4/libtest/: archetypes.hpp
lib/rapidyaml/samples/: quickstart.cpp
lib/rapidyaml/test/: test_github_issues.cpp
src/base/: Version.cpp
src/noise/: PerlinNoise.cpp
src/utils/: FileUtils.cpp  FrameTime.cpp
